--- a/configsync/field.storage.node.field_neighborhood.yml
+++ b/configsync/field.storage.node.field_neighborhood.yml
@@ -1,17 +1,17 @@
-uuid: fd9c1a95-19f3-4600-95cd-390c64b9924b
+uuid: 58b37782-c82f-4f0b-b683-6bae3b9e0c0f
 langcode: en
 status: true
 dependencies:
   module:
-    - datetime
     - node
-id: node.field_requested_datetime
-field_name: field_requested_datetime
+    - taxonomy
+id: node.field_neighborhood
+field_name: field_neighborhood
 entity_type: node
-type: datetime
+type: entity_reference
 settings:
-  datetime_type: datetime
-module: datetime
+  target_type: taxonomy_term
+module: core
 locked: false
 cardinality: 1
 translatable: true
