--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "composer/installers": "^1.2",
         "ext-json": "*",
         "cweagans/composer-patches": "^1.6.7",
-        "php": "^7.4"
+        "php": "^7.4",
+        "drupal/bootstrap4": "^2.0"
     },
     "license": "GPL-2.0-or-later",
     "authors": [
