--- a/configsync/block.block.bootstrap4_local_actions.yml
+++ b/configsync/block.block.bootstrap4_local_actions.yml
@@ -1,15 +1,15 @@
-uuid: 654a7aad-433a-4ccc-b422-20701c6efa81
+uuid: d2c762a5-beb3-4954-ad5d-26d34306e7b8
 langcode: en
 status: true
 dependencies:
   theme:
-    - stark
+    - bootstrap4
 _core:
-  default_config_hash: PffmQ-ABSz5tFjWmVsR7NesunDnEivvopnJnBjl8KNE
-id: stark_local_actions
-theme: stark
+  default_config_hash: rKurRLaH08AjwE5wsNzeL2fa77rF5pXKSR9WopsFYyI
+id: bootstrap4_local_actions
+theme: bootstrap4
 region: content
-weight: -10
+weight: -2
 provider: null
 plugin: local_actions_block
 settings:
