--- a/configsync/block.block.bootstrap4_local_tasks.yml
+++ b/configsync/block.block.bootstrap4_local_tasks.yml
@@ -1,15 +1,15 @@
-uuid: fe671452-a4a1-49b9-9c62-a28fce0a419b
+uuid: a2571a08-951d-419b-b53e-9d72f5ef70db
 langcode: en
 status: true
 dependencies:
   theme:
-    - stark
+    - bootstrap4
 _core:
-  default_config_hash: c-06bbElRY5sKmglk74ppgTW93Et4-EJFyNiUZMb8JY
-id: stark_local_tasks
-theme: stark
+  default_config_hash: IzSbK3zk-Gon9y7WLEWop15Wn__7LeKzBJIXqajlb00
+id: bootstrap4_local_tasks
+theme: bootstrap4
 region: content
-weight: -20
+weight: -4
 provider: null
 plugin: local_tasks_block
 settings:
