--- a/configsync/block.block.bootstrap4_main_navigation.yml
+++ b/configsync/block.block.bootstrap4_main_navigation.yml
@@ -1,4 +1,4 @@
-uuid: bcb0ac05-877a-4172-b166-6b73e560e25d
+uuid: e0bc464d-966e-4650-8a1a-4d289f928f91
 langcode: en
 status: true
 dependencies:
@@ -7,11 +7,13 @@ dependencies:
   module:
     - system
   theme:
-    - bos311
-id: mainnavigation
-theme: bos311
-region: breadcrumb
-weight: -3
+    - bootstrap4
+_core:
+  default_config_hash: 35BFwuaW_wb2mnnYk1tNg7T9Ro9RaewrCqOTtyQ7VJE
+id: bootstrap4_main_navigation
+theme: bootstrap4
+region: nav_main
+weight: 0
 provider: null
 plugin: 'system_menu_block:main'
 settings:
@@ -21,5 +23,5 @@ settings:
   label_display: '0'
   level: 1
   depth: 0
-  expand_all_items: false
+  expand_all_items: true
 visibility: {  }
