--- a/configsync/block.block.bootstrap4_page_title.yml
+++ b/configsync/block.block.bootstrap4_page_title.yml
@@ -1,15 +1,15 @@
-uuid: 8f628694-54bb-4f5f-90a9-85e9c7561faa
+uuid: 2005f3c6-e89c-4fef-badd-7f318cb3e4e0
 langcode: en
 status: true
 dependencies:
   theme:
-    - bos311
+    - bootstrap4
 _core:
-  default_config_hash: gfXKmThltk6eewwrjAEaxVPxzPEVHV1UfNjjOUQ5A7g
-id: bos311_page_title
-theme: bos311
-region: header
-weight: -4
+  default_config_hash: _0ZyPKUqcQMu9FlcCoa_Y-No4zdv-wUNF4hlSj60yi0
+id: bootstrap4_page_title
+theme: bootstrap4
+region: content
+weight: -6
 provider: null
 plugin: page_title_block
 settings:
