--- a/configsync/block.block.bos311bootstrap_local_actions.yml
+++ b/configsync/block.block.bos311bootstrap_local_actions.yml
@@ -1,15 +1,15 @@
-uuid: e5b72932-11a7-4428-b640-ecae2342a64e
+uuid: 8c6d5933-d39d-4869-b5eb-d98ac6d95288
 langcode: en
 status: true
 dependencies:
   theme:
-    - bos311
+    - bos311bootstrap
 _core:
-  default_config_hash: osZQ9lL2jTdH5am4LJiZ29RaivhzOf6vCpoRy6FZwIE
-id: bos311_local_actions
-theme: bos311
+  default_config_hash: rKurRLaH08AjwE5wsNzeL2fa77rF5pXKSR9WopsFYyI
+id: bos311bootstrap_local_actions
+theme: bos311bootstrap
 region: content
-weight: -10
+weight: -2
 provider: null
 plugin: local_actions_block
 settings:
