--- a/configsync/system.theme.yml
+++ b/configsync/system.theme.yml
@@ -1,4 +1,4 @@
-admin: bos311
-default: bos311
+admin: claro
+default: bos311bootstrap
 _core:
   default_config_hash: 6lQ55NXM9ysybMQ6NzJj4dtiQ1dAkOYxdDompa-r_kk
